api update createmanagern
